# circuits-game

./: .gitignore  Cargo.toml  README.md  document-format.md
docs/: component-model-notes.md  component-runtime-refactor-plan.md  document-format.md  editor_mode_plan.md
examples/: document_codec.py  stress_benchmark.rs  stress_viewer_benchmark.rs
fixtures/: sample_document_v1.cgdf  sample_document_v2.cgdf
old_code/: AGENTS.md  render-scene.sh
old_code/docs/: README.md  component-model-notes.md
old_code/src/: allocator.rs  basic_cell.wgsl  buffer_allocator.rs  circuit_runtime.rs  component_plan.rs  editor.rs  editor_tool_preview.wgsl  gates_render_header.wgsl  level_context.rs  render.rs  test_gpu.rs  windowing.rs  wires.rs
src/: allocator.rs  basic_cell.wgsl  basic_gates.wgsl  buffer_allocator.rs  charge_buffer.rs  child_components.rs  circuit_runtime.rs  component_plan.rs  components.rs  cross_write.wgsl  demo_scene.rs  document_format.rs  down_wire.wgsl  editor.rs  editor_interaction.rs  editor_tool_preview.wgsl  game_constants.rs  gate_plans.rs  gate_shared.wgsl  gates_render_header.wgsl  hover_preview.wgsl  kernel.rs  level_context.rs  lib.rs  main.rs  readback.rs  render.rs  render.wgsl  scene_render.rs  scene_render.wgsl  scene_render_edit.wgsl  scene_render_runtime.wgsl  setup.rs  shader.wgsl  simulation.rs  test_gpu.rs  ui_config.rs  viewer_frame.rs  visual_ui.rs  windowing.rs  (+3 more)
