[package]
name = "circuits-game"
version = "0.1.0"
edition = "2024"

[dependencies]
# wgpu = "29.0.1"
# pollster = "0.3"
bytemuck = { version = "1.25.0", features = ["derive"] }
pollster = "0.4.0"
# winit = "0.29.0"
egui-wgpu = "0.33.3"
egui-winit = "0.33.3"
egui = "0.33.3"
png = "0.18.1"
serde = { version = "1.0.228", features = ["derive"] }
bincode = "1.3.3"
rfd = "0.15.4"
